Bug 457361 - Picture of the day does not update
Summary: Picture of the day does not update
Status: RESOLVED FIXED
Alias: None
Product: kdeplasma-addons
Classification: Unmaintained
Component: Picture of the Day (other bugs)
Version First Reported In: 5.25.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression
: 403871 404294 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-08-01 08:04 UTC by Heiko Tietze
Modified: 2022-09-25 17:42 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Heiko Tietze 2022-08-01 08:04:25 UTC
My wallpaper is Picture Of The Day with Bing as provider. Worked nicely in the past but is broken for a couple of month now. 

STEPS TO REPRODUCE
1. Wallpaper type: Picture of the Day
2. Provider: Bing
3. wait for some days

OBSERVED RESULT
Wallpaper does not update (it does if the provider changes).

EXPECTED RESULT
Wallpaper is retrieved daily.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.25.3
KDE Frameworks Version: 5.96.0
Qt Version: 5.15.5
Kernel Version: 5.18.15-arch1-1 (64-bit)
Graphics Platform: X11
Comment 1 Fushan Wen 2022-08-21 03:33:40 UTC
Do you still encounter it nowadays? If so can you run

QT_LOGGING_RULES="kde.wallpapers.potd.debug=true" plasmashell --replace 2>&1 |grep potd

and post the output here?
Comment 2 Fushan Wen 2022-08-21 03:44:09 UTC
Git commit 8de2b71b86de50624584326abb632b6ca51821a4 by Fushan Wen.
Committed on 21/08/2022 at 03:43.
Pushed by fusionfuture into branch 'Plasma/5.25'.

wallpapers/potd: skip updating when another updating process is running

(cherry picked from commit 756312c369a3a68c00a923475bd08b637977da62)

M  +8    -0    wallpapers/potd/plugins/potdengine.cpp

https://invent.kde.org/plasma/kdeplasma-addons/commit/8de2b71b86de50624584326abb632b6ca51821a4
Comment 3 Bug Janitor Service 2022-08-21 10:22:41 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kdeplasma-addons/-/merge_requests/219
Comment 4 Fushan Wen 2022-08-21 10:24:36 UTC
Git commit 0487c8eb10055b5130f282c0039d96047b1eec06 by Fushan Wen.
Committed on 21/08/2022 at 10:20.
Pushed by fusionfuture into branch 'master'.

wallpapers/potd: update wallpapers after network is connected

Usually after waking up from sleep and when the engine receives
`PrepareForSleep` from org.freedesktop.login1.Manager, the network
is still disconnected, so the engine needs to update wallpapers after
the network is connected.

In case the network is connected before `PrepareForSleep`, the loading
condition will block duplicate update requests.
FIXED-IN: 5.26

M  +21   -3    wallpapers/potd/plugins/potdengine.cpp
M  +8    -1    wallpapers/potd/plugins/potdengine.h

https://invent.kde.org/plasma/kdeplasma-addons/commit/0487c8eb10055b5130f282c0039d96047b1eec06
Comment 5 Fushan Wen 2022-08-21 10:25:41 UTC
*** Bug 403871 has been marked as a duplicate of this bug. ***
Comment 6 Fushan Wen 2022-08-21 10:25:57 UTC
*** Bug 404294 has been marked as a duplicate of this bug. ***
Comment 7 Fushan Wen 2022-09-25 17:39:54 UTC
Git commit 20c0881ea13e3017593f550497848486c2397b5a by Fushan Wen.
Committed on 25/09/2022 at 17:39.
Pushed by fusionfuture into branch 'master'.

wallpapers/potd: fix not updating wallpaper in lock screen

Skip updating wallpapers in client's ctor. Call `setUpdateOverMeteredConnection`
or `updateSource` in `PotdBackend::registerClient()` , to ensure only
one loading process will be run at the same time.
FIXED-IN: 5.26

M  +11   -12   wallpapers/potd/plugins/potdbackend.cpp
M  +4    -2    wallpapers/potd/plugins/potdengine.cpp

https://invent.kde.org/plasma/kdeplasma-addons/commit/20c0881ea13e3017593f550497848486c2397b5a
Comment 8 Fushan Wen 2022-09-25 17:42:39 UTC
Git commit 9784f12b25866c09fea9d1ef83a76384a1ec2c4f by Fushan Wen.
Committed on 25/09/2022 at 17:42.
Pushed by fusionfuture into branch 'Plasma/5.26'.

wallpapers/potd: fix not updating wallpaper in lock screen

Skip updating wallpapers in client's ctor. Call `setUpdateOverMeteredConnection`
or `updateSource` in `PotdBackend::registerClient()` , to ensure only
one loading process will be run at the same time.
FIXED-IN: 5.26


(cherry picked from commit 20c0881ea13e3017593f550497848486c2397b5a)

M  +11   -12   wallpapers/potd/plugins/potdbackend.cpp
M  +4    -2    wallpapers/potd/plugins/potdengine.cpp

https://invent.kde.org/plasma/kdeplasma-addons/commit/9784f12b25866c09fea9d1ef83a76384a1ec2c4f