wallpapers/potd: update wallpapers after network is connected

Usually after waking up from sleep and when the engine receives
`PrepareForSleep` from org.freedesktop.login1.Manager, the network
is still disconnected, so the engine needs to update wallpapers after
the network is connected.

In case the network is connected before `PrepareForSleep`, the loading
condition will block duplicate update requests.

BUG: 457361
FIXED-IN: 5.26